# ghost-supply

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py  streamlit_app_fr.py
data/scenarios/: pokrovsk_mud_season.json  pokrovsk_night_op.json  pokrovsk_winter.json
docs/: Methodo.md  SOURCES_DONNEES.md
notebooks/: 01_quick_start_demo.ipynb
src/ghost_supply/: __init__.py
src/ghost_supply/decision/: __init__.py  cvar_routing.py  facility_location.py  game_theory.py  graph_builder.py  pareto.py
src/ghost_supply/output/: __init__.py  cot_export.py  report.py  visualization.py
src/ghost_supply/perception/: __init__.py  rf_propagation.py  terrain.py  threat_model.py  weather.py
src/ghost_supply/utils/: __init__.py  constants.py  data_loader.py  geo.py  translations.py
tests/: test_cvar.py  test_routing.py  test_terrain.py
