[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-supply"
version = "2.0.0"
description = "Optimiseur logistique tactique minimisant le risque d'interception via CVaR"
authors = [{name = "Saad LARAJ"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["optimisation", "logistique-militaire", "cvar", "planification-route", "geospatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "networkx>=3.0",
    "osmnx>=1.6.0",
    "rasterio>=1.3.0",
    # "richdem>=2.3.0",  # Optional, using numpy fallback
    "pyomo>=6.6.0",
    "folium>=0.14.0",
    "plotly>=5.14.0",
    "streamlit>=1.28.0",
    "prophet>=1.1.4",
    "scikit-learn>=1.3.0",
    "geopandas>=0.13.0",
    "shapely>=2.0.0",
    "geopy>=2.3.0",
    "nashpy>=0.0.35",
    # "pycraf>=2.0.0",  # Optional, simplified RF model fallback
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
